# ArduinoGFXPlayground

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  WifiSerial.cpp  WifiSerial.h  activate.bat  build_and_flash.bat  com_colors.h  main.cpp  net_interface.cpp  net_interface.h  net_wifi_serial_interface.cpp  net_wifi_serial_interface.h  print.h  readme.md  sdkconfig  sdkconfig.old  timer.h  ui_controller.cpp  ui_controller.h  ui_keyboard.h  ui_media_player_widget.cpp  ui_media_player_widget.h  ui_numeric_editor.cpp  ui_settings_widget.cpp  ui_settings_widget.h  ui_widget.cpp  ui_widget.h  wifi_serial.cpp
app/: ui_controller.cpp  ui_controller.h  ui_keyboard.cpp  ui_keyboard.h  ui_media_player_widget.cpp  ui_media_player_widget.h  ui_numeric_editor.cpp  ui_numeric_editor.h  ui_settings_widget.cpp  ui_settings_widget.h  ui_tune_widget.cpp  ui_tune_widget.h  ui_widget.h  ui_wifi_network_selector.cpp  ui_wifi_network_selector.h
hw/: ext_pinout.txt
platform/esp32-s3/: CMakeLists.txt  arduino_gfx.cpp  arduino_gfx.h  buttons.cpp  buttons.h  main.cpp  net_wifi_interface.h  platform_esp32s3.cpp  platform_esp32s3.h  timer.h
platform/esp32-s3/build-esp32/log/: idf_py_stderr_output_21516  idf_py_stdout_output_21516
platform/pc/: main.cpp  net_wifi_serial_interface.cpp  net_wifi_serial_interface.h  platform_pc.cpp  platform_pc.h  wifi_serial.h
platform/pc/Arduino_GFX_SDL/src/: Arduino_DataBus.h  Arduino_GFX.cpp  Arduino_GFX.h
platform/shared/: net_interface.cpp  net_interface.h  platform.h
platform_pc/: arduino.h  main.cpp  net_wifi_serial_interface.cpp  platform_pc.cpp  platform_pc.h  timer.cpp
platform_shared/: net_interface.h  platform.h
